--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<div id="gameport"></div>
 
 		<h1>Instruction</h1>
-		<p>Use the left and right arrow keys to move and catch the falling coins. Miss 5 and the game ends.</p>
+		<p>Use the left and right arrow keys or the 'a' and 'd' keys to rotate around the planet. You can fire your lasers by pressing 'space' or the 'w' key.</p>
 		
 		<h1>Comments</h1>
 		<div id="disqus_thread"></div>
