--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Project 2</title>
 	</head>
 	<body>
-		<h1>Game</h1>
+		<h1>Planet Defenders</h1>
 		<div id="gameport"></div>
 
 		<h1>Instruction</h1>
